<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.afterlogin.PaymentFragment">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/payment"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.pelsinkaplan.upschoolcapstoneproject.ui.custom.CustomDetailLine
            android:id="@+id/totalAmountCustomProfileDetailLine"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="74dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <com.pelsinkaplan.upschoolcapstoneproject.ui.custom.CustomDetailLine
            android:id="@+id/addressAmountCustomProfileDetailLine"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalAmountCustomProfileDetailLine" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/edit_address_payment_string"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/addressAmountCustomProfileDetailLine"
            app:layout_constraintStart_toStartOf="@+id/addressAmountCustomProfileDetailLine"
            app:layout_constraintTop_toBottomOf="@+id/addressAmountCustomProfileDetailLine" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardNumberInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardNumberInputEditText"
                style="@style/InputTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_id"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardExpireDateInputLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardNumberInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardExpireDateInputEditText"
                style="@style/InputTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_expire_date"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardCVCInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardExpireDateInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/cardNumberInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardCVCInputEditText"
                style="@style/InputTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cvc"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/button"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>