<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.afterlogin.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/advertisementImageView"
                    android:layout_width="0dp"
                    android:layout_height="500dp"
                    android:contentDescription="@string/advertisement_image"
                    android:scaleType="fitXY"
                    android:src="@drawable/advertisement"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fashion_sale"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/saleProductsButton"
                    app:layout_constraintStart_toStartOf="@+id/saleProductsButton" />

                <Button
                    android:id="@+id/saleProductsButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:background="@drawable/button"
                    android:text="@string/check"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/advertisementImageView"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/advertisementImageView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/productRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/advertisementImageView"
                    tools:listitem="@layout/item_product" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
